--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -62,7 +62,7 @@
     <form id="frm" name="frm">
         <div class="z-form-container">
             <!-- 상단 네비게이션 -->
-            <div class="z-form-header" id="menuBar">
+            <div class="z-form-header flex-row align-items-center" id="menuBar">
                 <img class="z-img i-form-designer" th:src="@{/assets/media/icons/formDesigner/topmenu/icon_form_designer.svg}" width="169" height="25" alt="Form Designer" />
                 <span class="z-form-name ml-auto mr-auto" id="formName"></span>
                 <!--버튼 영역-->
