--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1248,10 +1248,7 @@ input, button, select, optgroup, textarea {
 .z-form-header {
   position: fixed;
   top: 0;
-  right: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
+  width: 100%;
   height: 2.875rem;
   font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   font-size: 1.125rem;
