--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -7,23 +7,13 @@
 
 // 고정 layout 디자인
 @mixin fixedHeader {
-  @include fixed(0, 0, null, 0);
-  display: flex;
-  align-items: center;
+  @include fixed($top: 0);
+  width: 100%;
 }
 
 @mixin fixedContainer {
   @include fixed($layout-header-height, $layout-properties-width, 0, 0);
   overflow-y: auto;
-}
-
-// portal 디자인
-@mixin portalHeader() {
-  // 제목
-  .header-title {
-    height: 10.625rem; // 170px
-    padding: 3.75rem 0; // 60px 0
-  }
 }
 
 @mixin portalViewTemplate() {
