--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      layout:decorator="layout/portalLayout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/portal/pageType/verticalSplitLayout}">
 <head>
     <th:block layout:fragment="meta">
         <meta name="_csrf" th:content="${_csrf.token}"/>
@@ -16,188 +16,184 @@
     </th:block>
 </head>
 <body>
-<th:block layout:fragment="portalHead"></th:block>
-<th:block layout:fragment="portalContent">
-    <div class="signup-main flex-row">
-        <div class="signup-background">
-            <img class="z-img i-signup-logo" th:src="@{/assets/media/icons/logo/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
-            <div class="signup-login-face">
-                <span class="signup-login-note" th:text="#{login.label.loginNote}"></span>
-                <a class="z-button light-secondary signup-return" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
-            </div>
-            <img class="z-img i-signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
-        </div>
-        <div class="signup-form">
-            <h1 class="align-center" th:text="#{login.label.userSignUp}"></h1>
-            <div class="signup-base">
-                <form id="signUpForm" method="post" onsubmit="return false">
-                    <div class="signup-base-form flex-column">
-                        <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
-                        <div>
-                            <label>
-                                <span th:text="#{user.label.id}"></span>
-                                <span class="required"></span>
-                            </label>
-                            <div class="z-help-tooltip">
-                                <span class="z-icon i-tooltip"></span>
-                                <div class="z-tooltip-contents">
-                                    <span th:utext="#{user.tooltip.idRule}"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <input type="text" id="userId" name="userId" class="z-input" maxlength="100" required="required">
-                        <div>
-                            <label href="#password-guide" tabindex="-1">
-                                <span th:text="#{user.label.password}"></span>
-                                <span class="required"></span>
-                            </label>
-                            <div class="z-help-tooltip">
-                                <span class="z-icon i-tooltip"></span>
-                                <div class="z-tooltip-contents">
-                                    <span th:utext="#{user.tooltip.pwRule}"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <input type="password" id="password" name="password" class="z-input" maxlength="100" required="required">
-                        <label href="#password-guide" tabindex="-1">
-                            <span th:text="#{user.label.rePassword}"></span>
-                            <span class="required"></span>
-                        </label>
-                        <input type="password" id="rePassword" name="rePassword" class="z-input" maxlength="100" required="required">
-                        <label>
-                            <span th:text="#{user.label.name}"></span>
-                            <span class="required"></span>
-                        </label>
-                        <input type="text" id="userName" name="userName" class="z-input" maxlength="100" required="required">
-                        <label>
-                            <span th:text="#{user.label.email}"></span>
-                            <span class="required"></span>
-                        </label>
-                        <input type="text" id="email" name="email" class="z-input" maxlength="100" required="required">
-                        <label th:text="#{user.label.mobileNumber}"></label>
-                        <input id="mobileNumber" name="mobileNumber" class="z-input" maxlength="100"
-                               onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)">
-                        <label th:text="#{user.label.avatar}"></label>
-                        <div class="flex-column avatar-edit">
-                            <div class="avatar-sm">
-                                <div id="avatarDropZone"></div>
-                                <div class="avatar-description">
-                                    <span class="avatar-text" th:text="#{user.label.FileSizeLimit}"></span>
-                                    <span class="avatar-text" th:text="#{user.label.FileExtensionAllowed}"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <button class="z-button primary col-pct-12" id="userSignUp" th:text="#{login.btn.doSignUp}"
-                        onclick="userRegister()"></button>
-            </div>
+<th:block layout:fragment="pageLeft">
+    <div class="z-vertical-split-left z-signup-background">
+        <img class="z-img i-logo-white" th:src="@{/assets/media/icons/logo/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
+        <div class="z-signup-login-face float-right">
+            <span class="z-signup-login-note" th:text="#{login.label.loginNote}"></span>
+            <a class="z-button light-secondary signup-return" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
         </div>
     </div>
 </th:block>
-<th:block layout:fragment="pageScript">
-    <script type="text/javascript" th:inline="javascript">
-        /*<![CDATA[*/
-        window.onload = function() {
-            hiddenProgressBar();
-            document.getElementById('userId').focus();
-            zFileUploader.avatar({
-                extra: {
-                    dropZoneFilesId: 'avatarDropZone',
-                    type: 'avatar',
-                    dropZoneMaxFileSize: 0.2,
-                    dropZoneUrl: '/certification/fileupload?target=avatar',
-                    dropZoneMaxFiles: 1,
-                    acceptedFiles: '.png,.jpeg,.jpg,.gif',
-                    enableImageThumbnails: true,
-                    avatar: {
-                        id: [[${users?.userKey}]],
-                        path: [[${users?.avatarPath}]],
-                        value: [[${users?.avatarValue}]],
-                        size: [[${users?.avatarSize}]]
-                    }
-                }
-            });
-        };
-
-        const STATUS_SUCCESS = '0';
-        const STATUS_ERROR_USER_ID_DUPLICATION = '1';
-        const STATUS_ERROR_EMAIL_DUPLICATION = '3';
-
-        // 사용자 등록
-        function userRegister() {
-            if (validation()) {
-
-                const keyModule = [[${#request.getAttribute('_publicKeyModulus')}]];
-                const keyExponent = [[${#request.getAttribute('_publicKeyExponent')}]];
-                const rsa = new RSAKey();
-                rsa.setPublic(keyModule, keyExponent);
-
-                const password = document.getElementById('password').value;
-                const registerInfo = {
-                    userId: document.getElementById('userId').value,
-                    password: rsa.encrypt(password),
-                    userName: document.getElementById('userName').value,
-                    email: document.getElementById('email').value,
-                    mobileNumber: document.getElementById('mobileNumber').value,
-                    fileSeq: document.getElementsByName('fileSeq').value,
-                    avatarUUID: document.getElementById('avatarUUID').value
-                };
-
-                restSubmit('POST', '/certification', true, registerInfo);
-            }
-        }
-
-        // 데이터 전송
-        function restSubmit(method, url, async, data) {
-            const opt = {
-                method: method,
-                url: url,
-                async: async,
-                params: JSON.stringify(data),
-                contentType: 'application/json',
-                callbackFunc: function(response) {
-                    switch (response.responseText) {
-                        case STATUS_SUCCESS:
-                            aliceAlert.alertSuccess([[#{user.msg.signUp}]], function() {
-                                location.href = '/login';
-                            });
-                            break;
-                        case STATUS_ERROR_USER_ID_DUPLICATION:
-                            aliceAlert.alertWarning([[#{user.msg.sameUserId}]]);
-                            break;
-                        case STATUS_ERROR_EMAIL_DUPLICATION:
-                            aliceAlert.alertWarning([[#{user.msg.sameEmail}]]);
-                            break;
-                        default :
-                            aliceAlert.alertDanger([[#{user.msg.signUpFail}]]);
-                            break;
-                    }
-                }
-            };
-            aliceJs.sendXhr(opt);
-        }
-
-        // 빈 값 체크
-        function validation() {
-            if (isEmpty('userId', 'user.msg.enterUserId')) return false;
-            if (isEmpty('password', 'user.msg.enterUserPassword')) return false;
-            if (isEmpty('rePassword', 'user.msg.enterUserRePassword')) return false;
-            if (isEmpty('userName', 'user.msg.enterUserName')) return false;
-            if (isEmpty('email', 'user.msg.enterUserEmail')) return false;
-            if (isNotEquals('password', 'rePassword', 'user.msg.passwordNotEquals')) return false;
-            if (!isValidUserId('userId', true)) return false;
-            if (!isValidPassword('password')) return false;
-            if (!isValidEmail('email', true)) return false;
-
-            return true;
-        }
-
-        function deptPopUp() {
-            window.open('/users/department/view-pop', null, 'width=400, height=700');
-        }
-        /*]]>*/
-    </script>
+<th:block layout:fragment="pageRight">
+    <div class="z-vertical-split-right z-signup-form">
+        <h1 class="mb-2 align-center" th:text="#{login.label.userSignUp}"></h1>
+        <div class="z-signup-base">
+            <form id="signUpForm" method="post" onsubmit="return false">
+                <div class="z-signup-base-form flex-column">
+                    <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
+                    <div>
+                        <label>
+                            <span th:text="#{user.label.id}"></span>
+                            <span class="required"></span>
+                        </label>
+                        <div class="z-help-tooltip">
+                            <span class="z-icon i-tooltip"></span>
+                            <div class="z-tooltip-contents">
+                                <span th:utext="#{user.tooltip.idRule}"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="text" id="userId" name="userId" class="z-input" maxlength="100" required="required">
+                    <div>
+                        <label href="#password-guide" tabindex="-1">
+                            <span th:text="#{user.label.password}"></span>
+                            <span class="required"></span>
+                        </label>
+                        <div class="z-help-tooltip">
+                            <span class="z-icon i-tooltip"></span>
+                            <div class="z-tooltip-contents">
+                                <span th:utext="#{user.tooltip.pwRule}"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="password" id="password" name="password" class="z-input" maxlength="100" required="required">
+                    <label href="#password-guide" tabindex="-1">
+                        <span th:text="#{user.label.rePassword}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="password" id="rePassword" name="rePassword" class="z-input" maxlength="100" required="required">
+                    <label>
+                        <span th:text="#{user.label.name}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="text" id="userName" name="userName" class="z-input" maxlength="100" required="required">
+                    <label>
+                        <span th:text="#{user.label.email}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="text" id="email" name="email" class="z-input" maxlength="100" required="required">
+                    <label th:text="#{user.label.mobileNumber}"></label>
+                    <input id="mobileNumber" name="mobileNumber" class="z-input" maxlength="100"
+                           onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)">
+                    <label th:text="#{user.label.avatar}"></label>
+                    <div class="flex-column avatar-edit">
+                        <div class="avatar-sm">
+                            <div id="avatarDropZone"></div>
+                            <div class="avatar-description">
+                                <span class="avatar-text" th:text="#{user.label.FileSizeLimit}"></span>
+                                <span class="avatar-text" th:text="#{user.label.FileExtensionAllowed}"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <button class="z-button primary col-pct-12" id="userSignUp" th:text="#{login.btn.doSignUp}"
+                    onclick="userRegister()"></button>
+        </div>
+    </div>
 </th:block>
 </body>
+<script layout:fragment="pageScript" th:inline="javascript">
+    /*<![CDATA[*/
+    window.onload = function() {
+        hiddenProgressBar();
+        document.getElementById('userId').focus();
+        zFileUploader.avatar({
+            extra: {
+                dropZoneFilesId: 'avatarDropZone',
+                type: 'avatar',
+                dropZoneMaxFileSize: 0.2,
+                dropZoneUrl: '/certification/fileupload?target=avatar',
+                dropZoneMaxFiles: 1,
+                acceptedFiles: '.png,.jpeg,.jpg,.gif',
+                enableImageThumbnails: true,
+                avatar: {
+                    id: [[${users?.userKey}]],
+                    path: [[${users?.avatarPath}]],
+                    value: [[${users?.avatarValue}]],
+                    size: [[${users?.avatarSize}]]
+                }
+            }
+        });
+    };
+
+    const STATUS_SUCCESS = '0';
+    const STATUS_ERROR_USER_ID_DUPLICATION = '1';
+    const STATUS_ERROR_EMAIL_DUPLICATION = '3';
+
+    // 사용자 등록
+    function userRegister() {
+        if (validation()) {
+
+            const keyModule = [[${#request.getAttribute('_publicKeyModulus')}]];
+            const keyExponent = [[${#request.getAttribute('_publicKeyExponent')}]];
+            const rsa = new RSAKey();
+            rsa.setPublic(keyModule, keyExponent);
+
+            const password = document.getElementById('password').value;
+            const registerInfo = {
+                userId: document.getElementById('userId').value,
+                password: rsa.encrypt(password),
+                userName: document.getElementById('userName').value,
+                email: document.getElementById('email').value,
+                mobileNumber: document.getElementById('mobileNumber').value,
+                fileSeq: document.getElementsByName('fileSeq').value,
+                avatarUUID: document.getElementById('avatarUUID').value
+            };
+
+            restSubmit('POST', '/certification', true, registerInfo);
+        }
+    }
+
+    // 데이터 전송
+    function restSubmit(method, url, async, data) {
+        const opt = {
+            method: method,
+            url: url,
+            async: async,
+            params: JSON.stringify(data),
+            contentType: 'application/json',
+            callbackFunc: function(response) {
+                switch (response.responseText) {
+                    case STATUS_SUCCESS:
+                        aliceAlert.alertSuccess([[#{user.msg.signUp}]], function() {
+                            location.href = '/login';
+                        });
+                        break;
+                    case STATUS_ERROR_USER_ID_DUPLICATION:
+                        aliceAlert.alertWarning([[#{user.msg.sameUserId}]]);
+                        break;
+                    case STATUS_ERROR_EMAIL_DUPLICATION:
+                        aliceAlert.alertWarning([[#{user.msg.sameEmail}]]);
+                        break;
+                    default :
+                        aliceAlert.alertDanger([[#{user.msg.signUpFail}]]);
+                        break;
+                }
+            }
+        };
+        aliceJs.sendXhr(opt);
+    }
+
+    // 빈 값 체크
+    function validation() {
+        if (isEmpty('userId', 'user.msg.enterUserId')) return false;
+        if (isEmpty('password', 'user.msg.enterUserPassword')) return false;
+        if (isEmpty('rePassword', 'user.msg.enterUserRePassword')) return false;
+        if (isEmpty('userName', 'user.msg.enterUserName')) return false;
+        if (isEmpty('email', 'user.msg.enterUserEmail')) return false;
+        if (isNotEquals('password', 'rePassword', 'user.msg.passwordNotEquals')) return false;
+        if (!isValidUserId('userId', true)) return false;
+        if (!isValidPassword('password')) return false;
+        if (!isValidEmail('email', true)) return false;
+
+        return true;
+    }
+
+    function deptPopUp() {
+        window.open('/users/department/view-pop', null, 'width=400, height=700');
+    }
+    /*]]>*/
+</script>
 </html>
