--- a/src/main/resources/public/template/layout/portal/fragment/headFragment.html
+++ b/src/main/resources/public/template/layout/portal/fragment/headFragment.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-<div class="z-top">
+<div class="z-header flex-row align-items-center">
     <a href="/portals/main">
         <img class="z-img i-logo-white" th:src="@{/assets/media/icons/logo/icon_logo_white.svg}" width="152" height="26" alt="Alice">
     </a>
-    <span class="name" th:text="#{portal.label.mainPhrase}"></span>
+    <span class="z-name" th:text="#{portal.label.mainPhrase}"></span>
     <a class="ml-auto z-button light-secondary" href="/layout" sec:authorize="isAuthenticated()" th:text="#{portal.label.main}"></a>
     <a class="ml-auto z-button light-secondary" href="/login" sec:authorize="isAnonymous()" th:text="#{portal.label.login}"></a>
 </div>
