--- a/src/main/resources/public/template/layout/portal/portalLayout.html
+++ b/src/main/resources/public/template/layout/portal/portalLayout.html
@@ -3,19 +3,22 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title layout:title-pattern="$LAYOUT_TITLE : $CONTENT_TITLE">Zenius ITSM</title>
+    <th:block layout:fragment="meta"></th:block>
     <th:block th:replace="layout/portal/portalHead :: portalHead"></th:block>
     <th:block layout:fragment="pageHead"></th:block>
+    <th:block layout:fragment="scriptLink"></th:block>
 </head>
 <body>
 <div class="z-wrapper">
     <div class="z-portal-container">
-        <div class="z-main flex-column">
-            <!-- 상단 메뉴 -->
-            <div th:replace="layout/portal/fragment/topMenuFragment">topMenu</div>
-            <!-- 페이지별 컨텐츠 -->
-            <div class="z-portal-page">
-                <th:block layout:fragment="pageContent"></th:block>
-            </div>
+        <!-- 상단 메뉴 -->
+        <th:block layout:fragment="pageHeader">
+            <div th:replace="layout/portal/fragment/headFragment">head</div>
+        </th:block>
+        <!-- 메인 -->
+        <div class="z-main">
+            <!--/* 페이지별로 달라지는 메인 컨텐츠 */-->
+            <th:block layout:fragment="pageContent"></th:block>
         </div>
     </div>
 </div>
